[package]
name = "proconio_derive_for_1_39_0"
version = "0.2.1"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2015"
repository = "https://github.com/naokisz/proconio-rs-for-1-39-0"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Procedural macros for proconio"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
proc-macro2 = "1.0.9"

[dependencies.syn]
version = "1.0.17"
features = ["full", "extra-traits", "visit"]

[dev-dependencies.proconio_for_1_39_0]
version = "0.4.0"
path = "../proconio-for-1.39.0"
