[package]
name = "proconio_for_1_39_0"
version = "0.4.3"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2015"
repository = "https://github.com/naokisz/proconio-rs-for-1.39.0"
keywords = ["io", "procon", "procon"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Easy IO library for competitive programming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "stdin"
path = "tests/stdin.rs"
harness = false

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive"]

[[test]]
name = "fastout"
path = "tests/fastout.rs"
required-features = ["derive"]

[[test]]
name = "ui"
path = "tests/ui.rs"
required-features = ["derive"]

[[test]]
name = "issue_14"
path = "tests/issue_14.rs"
required-features = ["derive"]
harness = false

[dependencies]
lazy_static_for_1_39_0 = { git = "https://github.com/naokisz/lazy-static.rs-for-1.39.0.git", branch = "main" }

[dependencies.proconio_derive_for_1_39_0]
version = "0.2.0"
path = "../proconio-derive-for-1.39.0"
optional = true

[dev-dependencies]
rustversion = "1.0.2"
trybuild = "1.0.24"
assert_cli = "0.6.3"

[features]
derive = ["proconio_derive_for_1_39_0"]
